--- a/deployment/docker-compose-manifests/quickstart-docker-compose.yml
+++ b/deployment/docker-compose-manifests/quickstart-docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - my-network
 
   ts-ui-dashboard:
-    image: ${NAMESPACE}/ts-ui-dashboard:${TAG}
+    image: codewisdom/ts-ui-dashboard:v1
     restart: always
     ports:
       - 8080:8080
@@ -41,7 +41,7 @@ services:
       - my-network
 
   ts-auth-service:
-    image: ${NAMESPACE}/ts-auth-service:${TAG}
+    image: codewisdom/ts-auth-service:v1
     restart: always
     ports:
       - 12340:12340
@@ -54,7 +54,7 @@ services:
       - my-network
 
   ts-user-service:
-    image: ${NAMESPACE}/ts-user-service:${TAG}
+    image: codewisdom/ts-user-service:v1
     restart: always
     ports:
       - 12342:12342
@@ -67,7 +67,7 @@ services:
       - my-network
 
   ts-verification-code-service:
-    image: ${NAMESPACE}/ts-verification-code-service:${TAG}
+    image: codewisdom/ts-verification-code-service:v1
     restart: always
     ports:
       - 15678:15678
@@ -81,7 +81,7 @@ services:
 #      - my-network
 
   ts-route-service:
-    image: ${NAMESPACE}/ts-route-service:${TAG}
+    image: codewisdom/ts-route-service:v1
     restart: always
     ports:
          - 11178:11178
@@ -94,7 +94,7 @@ services:
         - my-network
 
   ts-contacts-service:
-    image: ${NAMESPACE}/ts-contacts-service:${TAG}
+    image: codewisdom/ts-contacts-service:v1
     restart: always
     ports:
       - 12347:12347
@@ -107,7 +107,7 @@ services:
         - my-network
 
   ts-order-service:
-    image: ${NAMESPACE}/ts-order-service:${TAG}
+    image: codewisdom/ts-order-service:v1
     restart: always
     ports:
       - 12031:12031
@@ -121,7 +121,7 @@ services:
 
 
   ts-order-other-service:
-    image: ${NAMESPACE}/ts-order-other-service:${TAG}
+    image: codewisdom/ts-order-other-service:v1
     restart: always
     ports:
       - 12032:12032
@@ -135,7 +135,7 @@ services:
 
 
   ts-config-service:
-    image: ${NAMESPACE}/ts-config-service:${TAG}
+    image: codewisdom/ts-config-service:v1
     restart: always
     ports:
       - 15679:15679
@@ -148,7 +148,7 @@ services:
       - my-network
 
   ts-station-service:
-    image: ${NAMESPACE}/ts-station-service:${TAG}
+    image: codewisdom/ts-station-service:v1
     restart: always
     ports:
       - 12345:12345
@@ -161,7 +161,7 @@ services:
       - my-network
 
   ts-train-service:
-    image: ${NAMESPACE}/ts-train-service:${TAG}
+    image: codewisdom/ts-train-service:v1
     restart: always
     ports:
       - 14567:14567
@@ -174,7 +174,7 @@ services:
       - my-network
 
   ts-travel-service:
-    image: ${NAMESPACE}/ts-travel-service:${TAG}
+    image: codewisdom/ts-travel-service:v1
     restart: always
     ports:
       - 12346:12346
@@ -187,7 +187,7 @@ services:
       - my-network
 
   ts-travel2-service:
-      image: ${NAMESPACE}/ts-travel2-service:${TAG}
+      image: codewisdom/ts-travel2-service:v1
       restart: always
       ports:
         - 16346:16346
@@ -200,7 +200,7 @@ services:
         - my-network
 
   ts-preserve-service:
-    image: ${NAMESPACE}/ts-preserve-service:${TAG}
+    image: codewisdom/ts-preserve-service:v1
     restart: always
     ports:
       - 14568:14568
@@ -208,7 +208,7 @@ services:
       - my-network
 
   ts-preserve-other-service:
-    image: ${NAMESPACE}/ts-preserve-other-service:${TAG}
+    image: codewisdom/ts-preserve-other-service:v1
     restart: always
     ports:
       - 14569:14569
@@ -217,7 +217,7 @@ services:
 
 
   ts-basic-service:
-      image: ${NAMESPACE}/ts-basic-service:${TAG}
+      image: codewisdom/ts-basic-service:v1
       restart: always
       ports:
         - 15680:15680
@@ -225,7 +225,7 @@ services:
           - my-network
 
 #  ts-ticketinfo-service:
-#        image: ${NAMESPACE}/ts-ticketinfo-service:${TAG}
+#        image: codewisdom/ts-ticketinfo-service:v1
 #        restart: always
 #        ports:
 #          - 15681:15681
@@ -233,7 +233,7 @@ services:
 #          - my-network
 
   ts-price-service:
-        image: ${NAMESPACE}/ts-price-service:${TAG}
+        image: codewisdom/ts-price-service:v1
         restart: always
         ports:
           - 16579:16579
@@ -246,7 +246,7 @@ services:
           - my-network
 
   ts-notification-service:
-        image: ${NAMESPACE}/ts-notification-service:${TAG}
+        image: codewisdom/ts-notification-service:v1
         restart: always
         ports:
           - 17853:17853
@@ -259,7 +259,7 @@ services:
       - my-network
 
   ts-security-service:
-        image: ${NAMESPACE}/ts-security-service:${TAG}
+        image: codewisdom/ts-security-service:v1
         restart: always
         ports:
           - 11188:11188
@@ -272,7 +272,7 @@ services:
           - my-network
 
   ts-inside-payment-service:
-        image: ${NAMESPACE}/ts-inside-payment-service:${TAG}
+        image: codewisdom/ts-inside-payment-service:v1
         restart: always
         ports:
           - 18673:18673
@@ -285,7 +285,7 @@ services:
           - my-network
 
   ts-execute-service:
-        image: ${NAMESPACE}/ts-execute-service:${TAG}
+        image: codewisdom/ts-execute-service:v1
         restart: always
         ports:
           - 12386:12386
@@ -293,7 +293,7 @@ services:
           - my-network
 
   ts-payment-service:
-        image: ${NAMESPACE}/ts-payment-service:${TAG}
+        image: codewisdom/ts-payment-service:v1
         restart: always
         ports:
           - 19001:19001
@@ -306,7 +306,7 @@ services:
           - my-network
 
   ts-rebook-service:
-        image: ${NAMESPACE}/ts-rebook-service:${TAG}
+        image: codewisdom/ts-rebook-service:v1
         restart: always
         ports:
           - 18886:18886
@@ -319,7 +319,7 @@ services:
           - my-network
 
   ts-cancel-service:
-        image: ${NAMESPACE}/ts-cancel-service:${TAG}
+        image: codewisdom/ts-cancel-service:v1
         restart: always
         ports:
           - 18885:18885
@@ -327,7 +327,7 @@ services:
           - my-network
 
   ts-assurance-service:
-        image: ${NAMESPACE}/ts-assurance-service:${TAG}
+        image: codewisdom/ts-assurance-service:v1
         restart: always
         ports:
           - 18888:18888
@@ -340,7 +340,7 @@ services:
           - my-network
 
   ts-seat-service:
-        image: ${NAMESPACE}/ts-seat-service:${TAG}
+        image: codewisdom/ts-seat-service:v1
         restart: always
         ports:
           - 18898:18898
@@ -348,7 +348,7 @@ services:
           - my-network
 
   ts-travel-plan-service:
-        image: ${NAMESPACE}/ts-travel-plan-service:${TAG}
+        image: codewisdom/ts-travel-plan-service:v1
         restart: always
         ports:
           - 14322:14322
@@ -356,7 +356,7 @@ services:
           - my-network
 
 #  ts-ticket-office-service:
-#        image: ${NAMESPACE}/ts-ticket-office-service:${TAG}
+#        image: codewisdom/ts-ticket-office-service:v1
 #        restart: always
 #        ports:
 #          - 16108:16108
@@ -369,7 +369,7 @@ services:
 #            - my-network
 
   ts-news-service:
-    image: ${NAMESPACE}/ts-news-service:${TAG}
+    image: codewisdom/ts-news-service:v1
     restart: always
     ports:
       - 12862:12862
@@ -391,7 +391,7 @@ services:
            - my-network
 
   ts-voucher-service:
-          image: ${NAMESPACE}/ts-voucher-service:${TAG}
+          image: codewisdom/ts-voucher-service:v1
           restart: always
           ports:
             - 16101:16101
@@ -403,7 +403,7 @@ services:
             - my-network
 
 #  ts-food-map-service:
-#        image: ${NAMESPACE}/ts-food-map-service:${TAG}
+#        image: codewisdom/ts-food-map-service:v1
 #        restart: always
 #        ports:
 #          - 18855:18855
@@ -416,7 +416,7 @@ services:
 #            - my-network
 
   ts-route-plan-service:
-          image: ${NAMESPACE}/ts-route-plan-service:${TAG}
+          image: codewisdom/ts-route-plan-service:v1
           restart: always
           ports:
             - 14578:14578
@@ -424,7 +424,7 @@ services:
             - my-network
 
   ts-food-service:
-    image: ${NAMESPACE}/ts-food-service:${TAG}
+    image: codewisdom/ts-food-service:v1
     restart: always
     ports:
       - 18856:18856
@@ -432,7 +432,7 @@ services:
       - my-network
 
   ts-consign-service:
-    image: ${NAMESPACE}/ts-consign-service:${TAG}
+    image: codewisdom/ts-consign-service:v1
     restart: always
     ports:
       - 16111:16111
@@ -445,7 +445,7 @@ services:
       - my-network
 
   ts-consign-price-service:
-    image: ${NAMESPACE}/ts-consign-price-service:${TAG}
+    image: codewisdom/ts-consign-price-service:v1
     restart: always
     ports:
       - 16110:16110
@@ -463,7 +463,7 @@ services:
       - my-network
 
   ts-admin-basic-info-service:
-    image: ${NAMESPACE}/ts-admin-basic-info-service:${TAG}
+    image: codewisdom/ts-admin-basic-info-service:v1
     restart: always
     ports:
       - 18767:18767
@@ -471,7 +471,7 @@ services:
       - my-network
 
   ts-admin-order-service:
-    image: ${NAMESPACE}/ts-admin-order-service:${TAG}
+    image: codewisdom/ts-admin-order-service:v1
     restart: always
     ports:
       - 16112:16112
@@ -479,7 +479,7 @@ services:
       - my-network
 
   ts-admin-route-service:
-    image: ${NAMESPACE}/ts-admin-route-service:${TAG}
+    image: codewisdom/ts-admin-route-service:v1
     restart: always
     ports:
       - 16113:16113
@@ -491,7 +491,7 @@ services:
       - my-network
 
   ts-admin-travel-service:
-    image: ${NAMESPACE}/ts-admin-travel-service:${TAG}
+    image: codewisdom/ts-admin-travel-service:v1
     restart: always
     ports:
       - 16114:16114
@@ -503,7 +503,7 @@ services:
       - my-network
 
   ts-admin-user-service:
-    image: ${NAMESPACE}/ts-admin-user-service:${TAG}
+    image: codewisdom/ts-admin-user-service:v1
     restart: always
     ports:
       - 16115:16115
@@ -515,7 +515,7 @@ services:
       - my-network
 
   ts-avatar-service:
-    image: ${NAMESPACE}/ts-avatar-service:${TAG}
+    image: codewisdom/ts-avatar-service:v1
     restart: always
     ports:
       - 17001:17001
@@ -523,7 +523,7 @@ services:
       - my-network
 
   ts-delivery-service:
-    image: ${NAMESPACE}/ts-delivery-servicee:${TAG}
+    image: codewisdom/ts-delivery-servicee:v1
     restart: always
     ports:
       - 18808:18808
@@ -536,7 +536,7 @@ services:
       - my-network
 
   ts-food-delivery-service:
-    image: ${NAMESPACE}/ts-food-delivery-service:${TAG}
+    image: codewisdom/ts-food-delivery-service:v1
     restart: always
     ports:
       - 18957:18957
@@ -549,7 +549,7 @@ services:
       - my-network
 
   ts-gateway-service:
-    image: ${NAMESPACE}/ts-gateway-service:${TAG}
+    image: codewisdom/ts-gateway-service:v1
     restart: always
     ports:
       - 18888:18888
@@ -563,7 +563,7 @@ services:
 
 
   ts-station-food-service:
-    image: ${NAMESPACE}/ts-station-food-service:${TAG}
+    image: codewisdom/ts-station-food-service:v1
     restart: always
     ports:
       - 18855:18855
@@ -577,7 +577,7 @@ services:
 
 
   ts-train-food-service:
-    image: ${NAMESPACE}/ts-train-food-service:${TAG}
+    image: codewisdom/ts-train-food-service:v1
     restart: always
     ports:
       - 19999:19999
