try modify restTemplate

--- a/deployment/kubernetes-manifests/quickstart-k8s/yamls/svc.yaml
+++ b/deployment/kubernetes-manifests/quickstart-k8s/yamls/svc.yaml
@@ -95,7 +95,7 @@ spec:
   ports:
     - name: http
       port: 15680
-    - name: http
+    - name: debug
       port: 32697
       nodePort: 32697
   selector:
