--- a/deployment/kubernetes-manifests/quickstart-k8s/yamls/sw_deploy.yaml
+++ b/deployment/kubernetes-manifests/quickstart-k8s/yamls/sw_deploy.yaml
@@ -2419,6 +2419,7 @@ spec:
                 name: nacos
           ports:
             - containerPort: 12345
+            - containerPort: 32697
           resources:
             requests:
               cpu: 100m
