--- a/deployment/kubernetes-manifests/quickstart-k8s/yamls/deploy.yaml
+++ b/deployment/kubernetes-manifests/quickstart-k8s/yamls/deploy.yaml
@@ -1728,6 +1728,7 @@ spec:
                 name: nacos
           ports:
             - containerPort: 12346
+            - containerPort: 32697
           resources:
             requests:
               cpu: 100m
