--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>ts-common</module>
+        <module>ts-time-service</module>
         <module>ts-verification-code-service</module>
         <module>ts-contacts-service</module>
         <module>ts-order-service</module>
