--- a/ts-gateway-service/src/main/resources/application.yml
+++ b/ts-gateway-service/src/main/resources/application.yml
@@ -82,6 +82,10 @@ spring:
           uri: lb://${CONSIGN_SERVICE_HOST:ts-consign-service}
           predicates:
             - Path=/api/v1/consignservice/**
+        - id: time
+          uri: lb://${TIME_SERVICE_HOST:ts-time-service}
+          predicates:
+            - Path=/api/v1/timeservice/**
 
         - id: contacts
           uri: lb://${CONTACTS_SERVICE_HOST:ts-contacts-service}
