--- a/deployment/kubernetes-manifests/quickstart-k8s/yamls/deploy.yaml
+++ b/deployment/kubernetes-manifests/quickstart-k8s/yamls/deploy.yaml
@@ -1942,7 +1942,7 @@ spec:
                   fieldPath: status.hostIP
           envFrom:
             - secretRef:
-                name: ts-wait-order-service
+                name: ts-wait-order-mysql
             - configMapRef:
                 name: nacos
           ports:
